# game-of-greed

./: README.md  pyproject.toml
game_of_greed/: banker.py  game.py  game_logic.py
tests/: flo.py  test_banker.py  test_calculate_scores.py  test_get_scorers.py  test_roll_dice.py  test_sim_advanced.py  test_sim_basic.py
tests/version_2/: bank_first_for_two_rounds.sim.txt  bank_one_roll_then_quit.sim.txt  quitter.sim.txt
tests/version_3/: cheat_and_fix.sim.txt  hot_dice.sim.txt  repeat_roller.sim.txt
