[tool.poetry]
name = "game-of-greed"
version = "0.1.0"
description = ""
authors = ["Michael Ryan <michaelryan2895@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
black = "^21.6b0"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
